Add new functionality to rest