@@ -4,6 +4,7 @@ import facade.FacadeController;
 import javax.validation.Valid;
 import javax.ws.rs.*;
 import javax.ws.rs.core.Response;
+import java.util.Arrays;
 import java.util.List;
 
 import static javax.ws.rs.core.MediaType.APPLICATION_JSON;
@@ -24,8 +25,10 @@ public class AuthorRest {
     @GET
     @Path("/news/{author_name}")
     @Produces(APPLICATION_JSON)
-    public Response getAuthorNews(@PathParam("author_name") String authorName) {
-        facadeController = new FacadeController(null, List.of(authorName), null);
+    public Response getAuthorNews(@PathParam("author_name") String authorsStr) {
+        List<String> authors = Arrays.asList(authorsStr.split("\\+"));
+
+        facadeController = new FacadeController(null, authors, null);
 
         return Response.ok(facadeController.getNewsList()).build();
     }
@@ -37,8 +40,15 @@ public class AuthorRest {
         facadeController.addNews(newsDTO);
     }
 
+    @PUT
+    @Path("/news/{id}")
+    public void updateNews(@PathParam("id") int updateNewsId, @Valid NewsDTO newsDTO) {
+        facadeController = new FacadeController(null, null, null);
+        facadeController.updateNews(updateNewsId, newsDTO);
+    }
+
     @DELETE
-    @Path("/{id}")
+    @Path("/news/{id}")
     public void deleteNews(@PathParam("id") int deleteNewsId) {
         facadeController = new FacadeController(null, null, null);
         facadeController.deleteNews(deleteNewsId);
